--- a/OPTIMUM-Neuro_tracking_2019-02-15.html
+++ b/OPTIMUM-Neuro_tracking_2019-02-15.html
@@ -197,6 +197,9 @@ $(document).ready(function () {
 <p><br></p>
 <div id="recruitment" class="section level3">
 <h3>Recruitment</h3>
+</div>
+<div id="gabi-attempt-is-here" class="section level1">
+<h1>gabi attempt IS HERE</h1>
 <table class="table table-hover" style="margin-left: auto; margin-right: auto;">
 <thead>
 <tr>
@@ -280,10 +283,10 @@ total
 consented current month
 </td>
 <td style="text-align:center;">
-0
+2
 </td>
 <td style="text-align:center;">
-0%
+50%
 </td>
 <td style="text-align:center;">
 0
@@ -298,19 +301,19 @@ consented current month
 0%
 </td>
 <td style="text-align:left;">
+1
+</td>
+<td style="text-align:center;">
+25%
+</td>
+<td style="text-align:center;">
 0
 </td>
 <td style="text-align:center;">
 0%
 </td>
 <td style="text-align:center;">
-0
-</td>
-<td style="text-align:center;">
-0%
-</td>
-<td style="text-align:center;">
-0
+3
 </td>
 </tr>
 <tr>
@@ -318,10 +321,10 @@ consented current month
 consented to date
 </td>
 <td style="text-align:center;">
-59
+61
 </td>
 <td style="text-align:center;">
-89%
+92%
 </td>
 <td style="text-align:center;">
 45
@@ -330,16 +333,16 @@ consented to date
 68%
 </td>
 <td style="text-align:center;">
-81
+83
 </td>
 <td style="text-align:center;">
-123%
+126%
 </td>
 <td style="text-align:left;">
-38
+40
 </td>
 <td style="text-align:center;">
-58%
+61%
 </td>
 <td style="text-align:center;">
 67
@@ -348,7 +351,7 @@ consented to date
 102%
 </td>
 <td style="text-align:center;">
-290
+296
 </td>
 </tr>
 <tr grouplength="2">
@@ -373,10 +376,10 @@ enrolled current month
 0%
 </td>
 <td style="text-align:center;">
-0
+1
 </td>
 <td style="text-align:center;">
-0%
+25%
 </td>
 <td style="text-align:left;">
 0
@@ -385,13 +388,13 @@ enrolled current month
 0%
 </td>
 <td style="text-align:center;">
-0
+1
 </td>
 <td style="text-align:center;">
-0%
+25%
 </td>
 <td style="text-align:center;">
-0
+2
 </td>
 </tr>
 <tr>
@@ -411,10 +414,10 @@ enrolled to date
 48%
 </td>
 <td style="text-align:center;">
-80
+82
 </td>
 <td style="text-align:center;">
-121%
+124%
 </td>
 <td style="text-align:left;">
 35
@@ -423,13 +426,13 @@ enrolled to date
 53%
 </td>
 <td style="text-align:center;">
-56
+57
 </td>
 <td style="text-align:center;">
-85%
+86%
 </td>
 <td style="text-align:center;">
-262
+265
 </td>
 </tr>
 <tr grouplength="2">
@@ -529,7 +532,7 @@ terminated during baseline
 –
 </td>
 <td style="text-align:center;">
-5
+6
 </td>
 <td style="text-align:center;">
 –
@@ -553,7 +556,7 @@ terminated during baseline
 –
 </td>
 <td style="text-align:center;">
-14
+15
 </td>
 </tr>
 <tr>
@@ -670,7 +673,6 @@ terminated during 24 mth FU
 </table>
 <hr />
 <p><br></p>
-</div>
 <div id="enrollment-breakdown" class="section level3">
 <h3>Enrollment breakdown</h3>
 <table class="table table-hover" style="margin-left: auto; margin-right: auto;">
@@ -768,10 +770,10 @@ completed neuropsych current month
 0%
 </td>
 <td style="text-align:center;">
-0
+1
 </td>
 <td style="text-align:center;">
-0%
+25%
 </td>
 <td style="text-align:left;">
 0
@@ -786,7 +788,7 @@ completed neuropsych current month
 0%
 </td>
 <td style="text-align:center;">
-0
+1
 </td>
 </tr>
 <tr>
@@ -806,10 +808,10 @@ completed neuropsych to date
 47%
 </td>
 <td style="text-align:center;">
-80
+82
 </td>
 <td style="text-align:center;">
-121%
+124%
 </td>
 <td style="text-align:left;">
 32
@@ -824,7 +826,7 @@ completed neuropsych to date
 82%
 </td>
 <td style="text-align:center;">
-256
+258
 </td>
 </tr>
 <tr grouplength="2">
@@ -849,10 +851,10 @@ completed blood current month
 0%
 </td>
 <td style="text-align:center;">
-0
+1
 </td>
 <td style="text-align:center;">
-0%
+25%
 </td>
 <td style="text-align:left;">
 0
@@ -867,7 +869,7 @@ completed blood current month
 0%
 </td>
 <td style="text-align:center;">
-0
+1
 </td>
 </tr>
 <tr>
@@ -887,10 +889,10 @@ completed blood to date
 48%
 </td>
 <td style="text-align:center;">
-80
+82
 </td>
 <td style="text-align:center;">
-121%
+124%
 </td>
 <td style="text-align:left;">
 35
@@ -899,13 +901,13 @@ completed blood to date
 53%
 </td>
 <td style="text-align:center;">
-53
+54
 </td>
 <td style="text-align:center;">
-80%
+82%
 </td>
 <td style="text-align:center;">
-259
+262
 </td>
 </tr>
 <tr grouplength="2">
@@ -918,10 +920,10 @@ completed blood to date
 completed MRI current month
 </td>
 <td style="text-align:center;">
-0
+11
 </td>
 <td style="text-align:center;">
-0%
+275%
 </td>
 <td style="text-align:center;">
 0
@@ -942,13 +944,13 @@ completed MRI current month
 0%
 </td>
 <td style="text-align:center;">
-0
+1
 </td>
 <td style="text-align:center;">
-0%
+25%
 </td>
 <td style="text-align:center;">
-0
+12
 </td>
 </tr>
 <tr>
@@ -968,10 +970,10 @@ completed MRI to date
 20%
 </td>
 <td style="text-align:center;">
-56
+57
 </td>
 <td style="text-align:center;">
-85%
+86%
 </td>
 <td style="text-align:left;">
 29
@@ -980,13 +982,13 @@ completed MRI to date
 44%
 </td>
 <td style="text-align:center;">
-39
+40
 </td>
 <td style="text-align:center;">
-59%
+61%
 </td>
 <td style="text-align:center;">
-165
+167
 </td>
 </tr>
 </tbody>
@@ -1057,13 +1059,13 @@ p
 sex (M:F:O)
 </td>
 <td style="text-align:center;">
-20:39
+21:39
 </td>
 <td style="text-align:center;">
 24:14
 </td>
 <td style="text-align:center;">
-16:65
+16:68
 </td>
 <td style="text-align:center;">
 14:23
@@ -1080,13 +1082,13 @@ sex (M:F:O)
 ethnicity (H:NH)
 </td>
 <td style="text-align:center;">
-14:45
+15:45
 </td>
 <td style="text-align:center;">
 1:37
 </td>
 <td style="text-align:center;">
-2:77
+2:80
 </td>
 <td style="text-align:center;">
 1:36
@@ -1103,13 +1105,13 @@ ethnicity (H:NH)
 race (minority:non-minority)
 </td>
 <td style="text-align:center;">
-18:41
+18:42
 </td>
 <td style="text-align:center;">
 10:28
 </td>
 <td style="text-align:center;">
-4:75
+4:78
 </td>
 <td style="text-align:center;">
 4:33
@@ -1126,13 +1128,13 @@ race (minority:non-minority)
 age
 </td>
 <td style="text-align:center;">
-69.78 (7.62)
+69.88 (7.60)
 </td>
 <td style="text-align:center;">
 70.11 (7.23)
 </td>
 <td style="text-align:center;">
-68.37 (5.72)
+68.20 (5.69)
 </td>
 <td style="text-align:center;">
 70.41 (5.36)
@@ -1141,7 +1143,7 @@ age
 68.06 (5.11)
 </td>
 <td style="text-align:center;">
-<span style="     color: black;">0.227</span>
+<span style="     color: black;">0.162</span>
 </td>
 </tr>
 <tr>
@@ -1149,13 +1151,13 @@ age
 education
 </td>
 <td style="text-align:center;">
-15.00 (3.77)
+14.83 (3.95)
 </td>
 <td style="text-align:center;">
 16.03 (2.57)
 </td>
 <td style="text-align:center;">
-14.92 (2.50)
+14.91 (2.50)
 </td>
 <td style="text-align:center;">
 14.50 (2.63)
@@ -1164,7 +1166,7 @@ education
 15.40 (2.40)
 </td>
 <td style="text-align:center;">
-<span style="     color: black;">0.19</span>
+<span style="     color: black;">0.174</span>
 </td>
 </tr>
 </tbody>
@@ -1181,6 +1183,7 @@ education
 </tr>
 </tfoot>
 </table>
+</div>
 </div>
 
 
